fixed contrast issue for download buttons and added version number

--- a/www/styles.css
+++ b/www/styles.css
@@ -1,4 +1,3 @@
-
 .skin-blue .main-header {
   background-color: rgb(56,126,63) !important;
 }
@@ -92,4 +91,19 @@ input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
+}
+
+.sidebar-version {
+  position: absolute;
+  bottom: 18px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  text-align: center;
+  color: #c0bcbc;
+  font-size: 13px;
+  z-index: 1000;
+  pointer-events: none;
+  font-style: italic;
+  letter-spacing: 1px;
 }
